Fix the issue with sudden jump in position in fullscreen
Steps to reproduce:
1. Enter fullscreen mode
2. Open chat for example
3. Click Jump to bottom
4. Everything jumps up and overflows the viewport

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,15 @@
 
 
 @media (max-width: 800px) {
+    /** Display jump fix */
+    #hud {
+        display: none;
+    }
+    .sheet-only-sheet {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
     /* Item dialog improvements */
     .window-app {
         min-width: auto !important;
